--- a/style.css
+++ b/style.css
@@ -16,9 +16,20 @@ h1{
 }
 .landing img{
     width: 80%;
-    height: 80%;
+
     float: right;
 }
 .test{
     margin: 10px 20px ;
+}
+.first-section{
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    /* padding: 50px 0px 0px 0px; */
+    background-color:#e5e5e5;
+}
+#logo{
+    width: 20%;
+    float: left;
 }
