--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ h1{
     align-items: flex-end;
 }
 #logo{
-    width: 20%;
     float: left;
 }
 h1{
@@ -62,3 +61,18 @@ h1{
     justify-content: center;
     /* align-items: center; */
 }
+.top-navigator{
+    float: inline-start;
+    overflow: hidden;
+    background-color: #e9e9e9;
+}
+.top-navigator a {
+    float: right;
+    color: #045fa6;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    /* margin-bottom: 20px; */
+  }
+  
