--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h1{
     float: inline-start;
     overflow: hidden;
     background-color: #e9e9e9;
+    
 }
 .top-navigator a {
     float: right;
@@ -73,6 +74,10 @@ h1{
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    margin-right: 20px;
     /* margin-bottom: 20px; */
   }
-  
+  .top-navigator a:hover {
+    background-color:#045fa6;
+    color: rgb(255, 255, 255);
+  }
