--- a/style.css
+++ b/style.css
@@ -36,9 +36,11 @@ h1{
      padding: 20px 0px 0px 0px; 
     background-color:#e5e5e5;
     align-items: flex-end;
+    /* margin-top: 40px; */
 }
-#logo{
-    float: left;
+.logo{
+    margin-top: 10px;
+    margin-left: 140px;
 }
 h1{
     margin-bottom: 10px;
@@ -62,12 +64,11 @@ h1{
     /* align-items: center; */
 }
 .top-navigator{
-    float: inline-start;
     overflow: hidden;
-    background-color: #e9e9e9;
+    background-color: #e5e5e5;
     
 }
-.top-navigator a {
+.nav-link {
     float: right;
     color: #045fa6;
     text-align: center;
@@ -77,7 +78,7 @@ h1{
     margin-right: 20px;
     /* margin-bottom: 20px; */
   }
-  .top-navigator a:hover {
+  .nav-link:hover {
     background-color:#045fa6;
     color: rgb(255, 255, 255);
   }
